--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
 
 # Definir o Deploy no Heroku
 deploy:
-  - provider: heroku
-  - api_key: $HEROKU_API_KEY
-  - edge: true
-  - app: devopslab-kelwins
-  - on:
-          branch: main
+        provider: heroku
+        api_key: $HEROKU_API_KEY
+        edge: true 
+        app: devopslab-kelwins
+        on:
+                branch: main
