--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 # Linguagem Utilizada para Desenvolver a Aplicação
 language: python
 
+# Add Root Settings
+root:
+        dist: xenial
+        os: linux
+
 # Versão que a aplicação suporta.
 python:
   - "3.7.9"
