--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,9 @@ deploy:
         project: mystical-magnet-315402
         on:
                 branch: main
+
+before_install:
+        - openssl aes-256-cbc -K $encrypted_1a144e751318_key -iv $encrypted_1a144e751318_iv
+          - in mystical-magnet-315402-8f518299c260.json.enc -out ../mystical-magnet-315402-8f518299c260.json
+          - d
+
