--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
 
                 - stage: STG TEST
                   script:
-                          - curl https://devopslab-kelwins.herokuapp.com/ | grep Hello || travis_terminate 1;
+                          - curl https://devopslab-kelwins.herokuapp.com/ | grep Atividade || travis_terminate 1;
 
                 - stage: PROD Deploy
                   script: skip
@@ -59,5 +59,5 @@ jobs:
 
                 - stage: PROD TEST
                   script:
-                          - curl https://mystical-magnet-315402.uc.r.appspot.com/ | grep Hello || travis_terminate 1;
+                          - curl https://mystical-magnet-315402.uc.r.appspot.com/ | grep Atividade || travis_terminate 1;
 
